# llvm-toy

./: .clang-format  .clang-tidy
Calc/: CMakeLists.txt  rtcalc.c
Calc/include/: AST.h  CodeGen.h  Parser.h
Calc/src/: CMakeLists.txt  Calc.cpp  CodeGen.cpp  Lexer.cpp
Chapter2/Calc/include/: Lexer.h  Sema.h
Chapter2/Calc/src/: Calc.cpp  Lexer.cpp  Parser.cpp  Sema.cpp
Chapter3/TinyLang/include/tinylang/Parser/: Parser.h
Chapter3/TinyLang/lib/Parser/: Parser.cpp
Chapter3/TinyLang/lib/Sema/: Sema.cpp
Chapter4/TinyLang/: CMakeLists.txt
Chapter4/TinyLang/include/tinylang/AST/: AST.h
Chapter4/TinyLang/include/tinylang/Basic/: TokenKinds.def  TokenKinds.h
Chapter4/TinyLang/include/tinylang/CodeGen/: CGModule.h  CGProcedure.h  CodeGenerator.h
Chapter4/TinyLang/include/tinylang/Lexer/: Token.h
Chapter4/TinyLang/include/tinylang/Sema/: Scope.h
Chapter4/TinyLang/lib/Basic/: CMakeLists.txt  Diagnostic.cpp  TokenKinds.cpp
Chapter4/TinyLang/lib/CodeGen/: CGModule.cpp  CGProcedure.cpp  CMakeLists.txt  CodeGenerator.cpp
Chapter4/TinyLang/lib/Lexer/: CMakeLists.txt
Chapter4/TinyLang/lib/Parser/: CMakeLists.txt
Chapter4/TinyLang/lib/Sema/: Scope.cpp
Chapter4/TinyLang/tools/driver/: CMakeLists.txt  Driver.cpp
Chapter5/TinyLang/include/tinylang/AST/: AST.h
Chapter5/TinyLang/include/tinylang/Basic/: LLVM.h  TokenKinds.def
Chapter5/TinyLang/include/tinylang/CodeGen/: CGProcedure.h
Chapter5/TinyLang/include/tinylang/Parser/: Parser.h
Chapter5/TinyLang/include/tinylang/Sema/: Sema.h
Chapter5/TinyLang/lib/Basic/: CMakeLists.txt
Chapter5/TinyLang/lib/CodeGen/: CMakeLists.txt
Chapter5/TinyLang/lib/Lexer/: Lexer.cpp
Chapter5/TinyLang/lib/Parser/: CMakeLists.txt  Parser.cpp
Chapter5/TinyLang/lib/Sema/: CMakeLists.txt  Sema.cpp
Chapter5/TinyLang/tools/driver/: CMakeLists.txt  Driver.cpp
TinyLang/: CMakeLists.txt
TinyLang/include/tinylang/Basic/: Diagnostic.def  Diagnostic.h
TinyLang/include/tinylang/Lexer/: Lexer.h
TinyLang/include/tinylang/Parser/: Parser.h
TinyLang/lib/Basic/: CMakeLists.txt
TinyLang/lib/Lexer/: CMakeLists.txt  Lexer.cpp
TinyLang/lib/Parser/: CMakeLists.txt  Parser.cpp
TinyLang/lib/Sema/: CMakeLists.txt  Sema.cpp
TinyLang/tools/driver/: CMakeLists.txt
